fdo#79045 PDF Import: fix text displacement

Change-Id: I22e3b90671f1dc4f9720758a7a5b79f56fa2ff49
Reviewed-on: https://gerrit.libreoffice.org/14098
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>